--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
 frontend.url = http://example.com
-backend.rest =  https://bkscovidestimator.herokuapp.com/
+backend.rest =  https://bkscovidestimator.herokuapp.com
